# mecanique-intelligente

./: .gitignore  PDD_ResNet.ipynb.json  README.md  ResNet.py
ML_model/: ML_01.py  ML_02.py  ML_03.py
PDD/: CMakeLists.txt  main.cpp  photo.cpp  photo.h  pixel.h
postprocessing/: Cotes.py  Forces.py  Liaisons.py  Poutres.py  attributions.py  constantes.py  data_example.py  labels.py  post_processing.py  visualisation.py
preprocessing/calculsPoutres/: CMakeLists.txt  hough.cpp  hough.h  pretraitement.cpp  pretraitement.h  traitement.cpp
preprocessing/connected_sets/: CMakeLists.txt  connected_set.h  main.cpp  picture.cpp  picture.h  pixel.cpp  pixel.h
preprocessing/src/: CMakeLists.txt  connected_set.cpp  hough.cpp  hough.h  main.cpp  picture.cpp  picture.h  pixel.cpp  pretraitement.cpp  pretraitement.h  traitement.cpp
